// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for anonymous desktop 1`] = `
<div
  className="rowad-mfe-header-shell"
  dir="ltr"
  lang="en"
>
  <a
    className="rowad-skip-link"
    href="#main"
  >
    Primary navigation
  </a>
  <header
    className="rowad-main-header"
  >
    <div
      className="rowad-header-main"
    >
      <div
        className="rowad-header-main-inner"
      >
        <a
          aria-label="Rowad — Home"
          className="rowad-brand-link"
          href="https://d1p65zue2xzvrm.cloudfront.net/"
        >
          <img
            alt=""
            src="https://d1p65zue2xzvrm.cloudfront.net/logo-en-light.svg"
          />
        </a>
        <nav
          aria-label="Primary navigation"
          className="rowad-site-nav"
        >
          <ul
            className="rowad-nav-list"
          >
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                Explore
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                For Who
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/journey-guide"
              >
                Journey Guide
              </a>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="rowad-header-actions"
    >
      <div
        className="rowad-header-action-spacer"
      />
      <div
        className="rowad-desktop-actions"
      >
        <a
          className="rowad-header-button rowad-courses-button"
          href="http://localhost:18000/courses"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4M2 6h4M2 10h4M2 14h4M2 18h4"
            />
            <path
              d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
            />
          </svg>
          <span>
            Rowad Courses
          </span>
        </a>
        <a
          className="rowad-header-button rowad-login-button"
          href="http://localhost:18000/login"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span>
            Log In
          </span>
        </a>
      </div>
      <button
        aria-expanded={false}
        aria-label="Open search"
        className="rowad-header-button rowad-search-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <path
            d="m21 21-4.3-4.3"
          />
        </svg>
      </button>
      <button
        aria-expanded={false}
        aria-label="Languages"
        className="rowad-header-button rowad-language-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="https://d1p65zue2xzvrm.cloudfront.net/_astro/english-usa.DqJ3CMLO.webp"
        />
      </button>
      <button
        aria-expanded={false}
        aria-label="Open menu"
        className="rowad-header-button rowad-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
          />
        </svg>
      </button>
    </div>
  </header>
</div>
`;

exports[`<Header /> renders correctly for anonymous mobile 1`] = `
<div
  className="rowad-mfe-header-shell"
  dir="ltr"
  lang="en"
>
  <a
    className="rowad-skip-link"
    href="#main"
  >
    Primary navigation
  </a>
  <header
    className="rowad-main-header"
  >
    <div
      className="rowad-header-main"
    >
      <div
        className="rowad-header-main-inner"
      >
        <a
          aria-label="Rowad — Home"
          className="rowad-brand-link"
          href="https://d1p65zue2xzvrm.cloudfront.net/"
        >
          <img
            alt=""
            src="https://d1p65zue2xzvrm.cloudfront.net/logo-en-light.svg"
          />
        </a>
        <nav
          aria-label="Primary navigation"
          className="rowad-site-nav"
        >
          <ul
            className="rowad-nav-list"
          >
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                Explore
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                For Who
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/journey-guide"
              >
                Journey Guide
              </a>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="rowad-header-actions"
    >
      <div
        className="rowad-header-action-spacer"
      />
      <div
        className="rowad-desktop-actions"
      >
        <a
          className="rowad-header-button rowad-courses-button"
          href="http://localhost:18000/courses"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4M2 6h4M2 10h4M2 14h4M2 18h4"
            />
            <path
              d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
            />
          </svg>
          <span>
            Rowad Courses
          </span>
        </a>
        <a
          className="rowad-header-button rowad-login-button"
          href="http://localhost:18000/login"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span>
            Log In
          </span>
        </a>
      </div>
      <button
        aria-expanded={false}
        aria-label="Open search"
        className="rowad-header-button rowad-search-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <path
            d="m21 21-4.3-4.3"
          />
        </svg>
      </button>
      <button
        aria-expanded={false}
        aria-label="Languages"
        className="rowad-header-button rowad-language-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="https://d1p65zue2xzvrm.cloudfront.net/_astro/english-usa.DqJ3CMLO.webp"
        />
      </button>
      <button
        aria-expanded={false}
        aria-label="Open menu"
        className="rowad-header-button rowad-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
          />
        </svg>
      </button>
    </div>
  </header>
</div>
`;

exports[`<Header /> renders correctly for authenticated desktop 1`] = `
<div
  className="rowad-mfe-header-shell"
  dir="ltr"
  lang="en"
>
  <a
    className="rowad-skip-link"
    href="#main"
  >
    Primary navigation
  </a>
  <header
    className="rowad-main-header"
  >
    <div
      className="rowad-header-main"
    >
      <div
        className="rowad-header-main-inner"
      >
        <a
          aria-label="Rowad — Home"
          className="rowad-brand-link"
          href="https://d1p65zue2xzvrm.cloudfront.net/"
        >
          <img
            alt=""
            src="https://d1p65zue2xzvrm.cloudfront.net/logo-en-light.svg"
          />
        </a>
        <nav
          aria-label="Primary navigation"
          className="rowad-site-nav"
        >
          <ul
            className="rowad-nav-list"
          >
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                Explore
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                For Who
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/journey-guide"
              >
                Journey Guide
              </a>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="rowad-header-actions"
    >
      <div
        className="rowad-header-action-spacer"
      />
      <div
        className="rowad-desktop-actions"
      >
        <a
          className="rowad-header-button rowad-courses-button"
          href="http://localhost:18000/courses"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4M2 6h4M2 10h4M2 14h4M2 18h4"
            />
            <path
              d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
            />
          </svg>
          <span>
            Rowad Courses
          </span>
        </a>
        <button
          aria-expanded={false}
          className="rowad-header-button rowad-account-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span>
            edX
          </span>
          <svg
            aria-hidden="true"
            className="rowad-chevron"
            fill="none"
            stroke="currentColor"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <button
        aria-expanded={false}
        aria-label="Open search"
        className="rowad-header-button rowad-search-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <path
            d="m21 21-4.3-4.3"
          />
        </svg>
      </button>
      <button
        aria-expanded={false}
        aria-label="Languages"
        className="rowad-header-button rowad-language-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="https://d1p65zue2xzvrm.cloudfront.net/_astro/english-usa.DqJ3CMLO.webp"
        />
      </button>
      <button
        aria-expanded={false}
        aria-label="Open menu"
        className="rowad-header-button rowad-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
          />
        </svg>
      </button>
    </div>
  </header>
</div>
`;

exports[`<Header /> renders correctly for authenticated mobile 1`] = `
<div
  className="rowad-mfe-header-shell"
  dir="ltr"
  lang="en"
>
  <a
    className="rowad-skip-link"
    href="#main"
  >
    Primary navigation
  </a>
  <header
    className="rowad-main-header"
  >
    <div
      className="rowad-header-main"
    >
      <div
        className="rowad-header-main-inner"
      >
        <a
          aria-label="Rowad — Home"
          className="rowad-brand-link"
          href="https://d1p65zue2xzvrm.cloudfront.net/"
        >
          <img
            alt=""
            src="https://d1p65zue2xzvrm.cloudfront.net/logo-en-light.svg"
          />
        </a>
        <nav
          aria-label="Primary navigation"
          className="rowad-site-nav"
        >
          <ul
            className="rowad-nav-list"
          >
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                Explore
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <button
                aria-expanded={false}
                className="rowad-nav-trigger"
                onClick={[Function]}
                type="button"
              >
                For Who
                <svg
                  aria-hidden="true"
                  className="rowad-chevron"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/journey-guide"
              >
                Journey Guide
              </a>
            </li>
            <li>
              <a
                className="rowad-nav-link"
                href="https://d1p65zue2xzvrm.cloudfront.net/about"
              >
                About
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      className="rowad-header-actions"
    >
      <div
        className="rowad-header-action-spacer"
      />
      <div
        className="rowad-desktop-actions"
      >
        <a
          className="rowad-header-button rowad-courses-button"
          href="http://localhost:18000/courses"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.4 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7.4M2 6h4M2 10h4M2 14h4M2 18h4"
            />
            <path
              d="M21.378 5.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
            />
          </svg>
          <span>
            Rowad Courses
          </span>
        </a>
        <button
          aria-expanded={false}
          className="rowad-header-button rowad-account-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
          <span>
            edX
          </span>
          <svg
            aria-hidden="true"
            className="rowad-chevron"
            fill="none"
            stroke="currentColor"
            strokeWidth="2"
            viewBox="0 0 24 24"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
      <button
        aria-expanded={false}
        aria-label="Open search"
        className="rowad-header-button rowad-search-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <path
            d="m21 21-4.3-4.3"
          />
        </svg>
      </button>
      <button
        aria-expanded={false}
        aria-label="Languages"
        className="rowad-header-button rowad-language-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          src="https://d1p65zue2xzvrm.cloudfront.net/_astro/english-usa.DqJ3CMLO.webp"
        />
      </button>
      <button
        aria-expanded={false}
        aria-label="Open menu"
        className="rowad-header-button rowad-menu-button"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
          />
        </svg>
      </button>
    </div>
  </header>
</div>
`;
